# ai-bias-auditor

./: .dockerignore  .env.example  .firebaserc  .gitignore  Dockerfile  IMPORTANT_FILES.txt  README.md  firebase.json  firestore.rules  pyproject.toml  requirements.txt
ai-bias-auditor-main/: README.md
ai-bias-auditor-main/app/: audit.py  governance.py
ai-bias-auditor-main/data/demos/: compas.csv
ai-bias-auditor-main/flutter_firebase_auditor/: firestore.indexes.json
ai-bias-auditor-main/flutter_firebase_auditor/lib/: app.dart
ai-bias-auditor-main/flutter_firebase_auditor/web/: manifest.json
ai-bias-auditor-main/policies/: employment_screening_strict.json
ai-bias-auditor-main/tests/: test_audit.py
app/: __init__.py  audit.py  demo_data.py  main.py  policies.py  report.py  storage.py
app/static/: app.js  audit.js  history.js  landing.css  landing.js
app/templates/: audit.html  history.html  index.html
data/demos/: german_credit.csv
flutter_firebase_auditor/: .gitignore  README.md  STITCH_DESIGN.md  firebase.json  firestore.rules  pubspec.yaml
flutter_firebase_auditor/lib/: app.dart  firebase_options.dart  main.dart
flutter_firebase_auditor/lib/models/: audit_record.dart
flutter_firebase_auditor/web/: index.html
policies/: credit_lending_strict.json  default_governance_v1.json  low_risk_internal_tool.json  medical_triage_strict.json
scripts/: download_demos.py
tests/: test_audit.py
version 1/: Dockerfile  IMPORTANT_FILES.txt  README.md
version 1/app/: main.py  report.py
version 1/flutter_firebase_auditor/: firestore.rules
(+38 files in other folders)
